calico_versioned_docs/version-3.32/reference/calicoctl/ipam/configure.mdx
---
description: Reference for the calicoctl IPAM configure command in Calico Open Source, used to set IP address management options such as strict affinity.
---

# calicoctl ipam configure

This section describes the `calicoctl ipam configure` command.

Read the [calicoctl overview](../overview.mdx) for a full list of calicoctl commands.

## Displaying the help text for 'calicoctl ipam configure' command

Run `calicoctl ipam configure --help` to display the following help menu for the
command.

```
Usage:
  calicoctl ipam configure --strictaffinity=<true/false>
                           [--max-blocks-per-host=<number>]
                           [--kubevirt-ip-persistence=<Enabled|Disabled>]
                           [--config=<CONFIG>]

Options:
  -h --help                        Show this screen.
     --strictaffinity=<true/false>  Set StrictAffinity to true/false. When StrictAffinity
                                    is true, borrowing IP addresses is not allowed.
     --max-blocks-per-host=<number> Set the maximum number of blocks that can be affine
                                    to a host.
     --kubevirt-ip-persistence=<Enabled|Disabled>
                                    Control whether KubeVirt VMs retain persistent IP
                                    addresses across lifecycle events.
  -c --config=<CONFIG>              Path to the file containing connection configuration in
                                    YAML or JSON format.
                                    [default: /etc/calico/calicoctl.cfg]

Description:
 Modify configuration for Calico IP address management.
```

### Examples

```bash
calicoctl ipam configure --strictaffinity=true
```

```bash
calicoctl ipam configure --kubevirt-ip-persistence=Enabled
```

### General options

```
-c --config=<CONFIG>      Path to the file containing connection
                          configuration in YAML or JSON format.
                          [default: /etc/calico/calicoctl.cfg]
```

## See also

- [Installing calicoctl](../../../operations/calicoctl/install.mdx)
